tests/cases/parser/patterns/spread_pattern_in_namespace_pattern.stderr
error: expected a name here
 --> $DIR/spread_pattern_in_namespace_pattern.hash:4:7
3 |   // Spread patterns are disallowed within namespaces
4 |   { x,  ...d} := foo();
  |         ^ 
  = help: expected a `identifier`
